# PopoCLI

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RESTPopocatepetl.sln
.github/workflows/: release.yml
API/: API.csproj
API/Controllers/: DailyController.cs
API/Properties/: launchSettings.json
DataAccess/: CenapredScraper.cs  DataAccess.csproj  DateHelper.cs  SeleniumHelper.cs
DataAccess/ElementMaps/Cenapred/: ArchiveElementMap.cs
DataAccess/Entities/: CenapredData.cs
src/: error.rs  lib.rs  main.rs  models.rs  scraper.rs
tests/: date_parsing_tests.rs  historical_fetch_tests.rs
tests/fixtures/: minimal_report.html
