[package]
name = "popo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Edward Donaldson"]
description = "Popocatépetl volcano monitoring CLI and library"
repository = "https://github.com/KyleEdwardDonaldson/PopoCLI"
homepage = "https://github.com/KyleEdwardDonaldson/PopoCLI"
documentation = "https://docs.rs/popo-cli"
readme = "README.md"
license = "MIT"
keywords = ["volcano", "monitoring", "mexico", "cli", "cenapred"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "popo"
path = "src/main.rs"

[lib]
name = "popo_cli"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
